Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you between the age of 16 and 70?</inlineHelpText>
    <label>Age Between 16 and 70</label>
    <type>Checkbox</type>
</CustomField>