Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Aspens_Roles__c.field-meta.xml
<CustomField>
    <fullName>Aspens_Roles__c</fullName>
    <label>Aspens Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chef De Partie</fullName>
            </value>
            <value>
                <fullName>Chef Manager</fullName>
            </value>
            <value>
                <fullName>General Catering Assistant</fullName>
            </value>
            <value>
                <fullName>Head Chef</fullName>
            </value>
            <value>
                <fullName>Kitchen Porter</fullName>
            </value>
            <value>
                <fullName>Sous Chef</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>