Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Attention_to_Detail__c.field-meta.xml
<CustomField>
    <fullName>Attention_to_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attention to Detail</label>
    <type>Checkbox</type>
</CustomField>