Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <inlineHelpText>Only transfer responses to other brands if CV is present, i.e. CV Attached is ticked</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand</valueSetName>
    </valueSet>
</CustomField>