Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Call_Center_Experience__c.field-meta.xml
<CustomField>
    <fullName>BT_Call_Center_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have at previous Call Centre or Retail experience?</inlineHelpText>
    <label>Call Center Experience</label>
    <type>Checkbox</type>
</CustomField>