Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Client_Premises__c.field-meta.xml
<CustomField>
    <fullName>BT_Client_Premises__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you happy to work from the client premises?</inlineHelpText>
    <label>Client Premises</label>
    <type>Checkbox</type>
</CustomField>