Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Comfortable_Talking__c.field-meta.xml
<CustomField>
    <fullName>BT_Comfortable_Talking__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you comfortable talking to a variety of customers, including those who are angry or unhappy?</inlineHelpText>
    <label>Comfortable Talking</label>
    <type>Checkbox</type>
</CustomField>