Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Criminal_Convictions__c.field-meta.xml
<CustomField>
    <fullName>BT_Criminal_Convictions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have you any unspent criminal convictions as defined under the Rehabilitation of Offenders Act 1974?</inlineHelpText>
    <label>Criminal Convictions</label>
    <type>Checkbox</type>
</CustomField>