Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Criminal_Convictions_Details__c.field-meta.xml
<CustomField>
    <fullName>BT_Criminal_Convictions_Details__c</fullName>
    <inlineHelpText>Please provide further details:</inlineHelpText>
    <label>Criminal Convictions Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>