Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Holiday_Details__c.field-meta.xml
<CustomField>
    <fullName>BT_Holiday_Details__c</fullName>
    <inlineHelpText>Please provide further details:</inlineHelpText>
    <label>Holiday Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>