Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>BT_Job_Role__c</fullName>
    <label>BT Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warehouse Operative</fullName>
            </value>
            <value>
                <fullName>Forklift Truck Driver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>