Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Location__c.field-meta.xml
<CustomField>
    <fullName>BT_Location__c</fullName>
    <label>BT Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Northallerton</fullName>
                <label>Northallerton, Darlington Road, DL6 2PJ</label>
            </value>
            <value>
                <fullName>Magna Park</fullName>
                <label>Magna Park, Lutterworth, LE17 4XN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>