Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Making_Taking_Calls__c.field-meta.xml
<CustomField>
    <fullName>BT_Making_Taking_Calls__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you happy taking inbound calls and making outbound calls?</inlineHelpText>
    <label>Making/Taking Calls</label>
    <type>Checkbox</type>
</CustomField>