Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Problem_Solving_Experience__c.field-meta.xml
<CustomField>
    <fullName>BT_Problem_Solving_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have experience of Problem solving?</inlineHelpText>
    <label>Problem Solving Experience</label>
    <type>Checkbox</type>
</CustomField>