Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Reason_for_Leaving__c.field-meta.xml
<CustomField>
    <fullName>BT_Reason_for_Leaving__c</fullName>
    <inlineHelpText>What was your reason for leaving?</inlineHelpText>
    <label>Reason for Leaving</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>