Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Shift_Restriction_Details__c.field-meta.xml
<CustomField>
    <fullName>BT_Shift_Restriction_Details__c</fullName>
    <inlineHelpText>Please provide more details:</inlineHelpText>
    <label>Shift Restriction Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>