Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Shift_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>BT_Shift_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The role you have applied for requires you to work rotating shifts do you have any restrictions on the hours you can work?</inlineHelpText>
    <label>Shift Restrictions</label>
    <type>Checkbox</type>
</CustomField>