Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Strong_Written_Verbal_Skills__c.field-meta.xml
<CustomField>
    <fullName>BT_Strong_Written_Verbal_Skills__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have strong written and verbal communication skills?</inlineHelpText>
    <label>Strong Written/Verbal Skills</label>
    <type>Checkbox</type>
</CustomField>