Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Upcoming_Holidays__c.field-meta.xml
<CustomField>
    <fullName>BT_Upcoming_Holidays__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have you any holidays or appointments booked during the next 6 weeks?</inlineHelpText>
    <label>Upcoming Holidays</label>
    <type>Checkbox</type>
</CustomField>