Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Virtual_Assessment__c.field-meta.xml
<CustomField>
    <fullName>BT_Virtual_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you happy to attend a virtual or on site assessment for approx. 2hrs?</inlineHelpText>
    <label>Virtual Assessment</label>
    <type>Checkbox</type>
</CustomField>