Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Work_Pattern__c.field-meta.xml
<CustomField>
    <fullName>BT_Work_Pattern__c</fullName>
    <label>BT Work Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full time</fullName>
            </value>
            <value>
                <fullName>Part time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>