Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/BT_Worked_BT_Previously__c.field-meta.xml
<CustomField>
    <fullName>BT_Worked_BT_Previously__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have you worked for BT previously?</inlineHelpText>
    <label>Worked BT Previously</label>
    <type>Checkbox</type>
</CustomField>