Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Catering_Roles__c.field-meta.xml
<CustomField>
    <fullName>Catering_Roles__c</fullName>
    <label>Catering Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kitchen Porter</fullName>
            </value>
            <value>
                <fullName>General Assistant</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>