Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/College_List__c.field-meta.xml
<CustomField>
    <fullName>College_List__c</fullName>
    <label>College List</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>College_Regions__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bishop Grosseteste University College Lincoln</fullName>
            </value>
            <value>
                <fullName>Brooksby Melton College</fullName>
            </value>
            <value>
                <fullName>David Game Group (Northampton)</fullName>
            </value>
            <value>
                <fullName>International Study Centre (Lincoln)</fullName>
            </value>
            <value>
                <fullName>International Study Centre (Leicester)</fullName>
            </value>
            <value>
                <fullName>Leicester College</fullName>
            </value>
            <value>
                <fullName>Lincoln College</fullName>
            </value>
            <value>
                <fullName>Loughborough College</fullName>
            </value>
            <value>
                <fullName>New College Nottingham</fullName>
            </value>
            <value>
                <fullName>New College Stamford</fullName>
            </value>
            <value>
                <fullName>North Lindsey College</fullName>
            </value>
            <value>
                <fullName>Stephenson College Coalville</fullName>
            </value>
            <value>
                <fullName>Abbey College (Cambridge)</fullName>
            </value>
            <value>
                <fullName>Bell Educational Trust (Cambridge)</fullName>
            </value>
            <value>
                <fullName>Bedford College</fullName>
            </value>
            <value>
                <fullName>Bellerbys College (Cambridge)</fullName>
            </value>
            <value>
                <fullName>Cambridge Education Group</fullName>
            </value>
            <value>
                <fullName>Cambridge Ruskin International College (CRIC)</fullName>
            </value>
            <value>
                <fullName>Cambridge School of Visual and Performing Arts</fullName>
            </value>
            <value>
                <fullName>CATS College (Cambridge)</fullName>
            </value>
            <value>
                <fullName>Colchester English Canter</fullName>
            </value>
            <value>
                <fullName>Colchester Institute</fullName>
            </value>
            <value>
                <fullName>College of West Anglia</fullName>
            </value>
            <value>
                <fullName>EF University Preparation (Cambridge)</fullName>
            </value>
            <value>
                <fullName>Easton College</fullName>
            </value>
            <value>
                <fullName>INTO University Partnership LTD</fullName>
            </value>
            <value>
                <fullName>Kaplan International (Cambridge)</fullName>
            </value>
            <value>
                <fullName>Navitas University Programs (Anglia Ruskin)</fullName>
            </value>
            <value>
                <fullName>Navitas University Programs (Hertfordshire)</fullName>
            </value>
            <value>
                <fullName>Oxford House College – Stratford Upon Avon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>