Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Conflict_Interest__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Any potential conflicts of interest if candidate were successful in the application</description>
    <label>Conflict Interest?</label>
    <type>Checkbox</type>
</CustomField>