Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Current_License_Condition__c.field-meta.xml
<CustomField>
    <fullName>Current_License_Condition__c</fullName>
    <label>Current License Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>1 point</fullName>
            </value>
            <value>
                <fullName>2 points</fullName>
            </value>
            <value>
                <fullName>3 points</fullName>
            </value>
            <value>
                <fullName>4 points</fullName>
            </value>
            <value>
                <fullName>5 points</fullName>
            </value>
            <value>
                <fullName>6 points</fullName>
            </value>
            <value>
                <fullName>7 points</fullName>
            </value>
            <value>
                <fullName>8 points</fullName>
            </value>
            <value>
                <fullName>9 points</fullName>
            </value>
            <value>
                <fullName>10 points</fullName>
            </value>
            <value>
                <fullName>11 points</fullName>
            </value>
            <value>
                <fullName>12 points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>