Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Current_University_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_University_Year__c</fullName>
    <label>Current University Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate 1st year</fullName>
            </value>
            <value>
                <fullName>Undergraduate 2nd year</fullName>
            </value>
            <value>
                <fullName>Undergraduate 3rd year</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>PhD</fullName>
            </value>
            <value>
                <fullName>Graduated</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>