Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Current_Year_Other__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Other__c</fullName>
    <label>Current Year Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>