Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Customer_Service_Experience__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Service Experience</label>
    <type>Checkbox</type>
</CustomField>