Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Customers_Needs__c.field-meta.xml
<CustomField>
    <fullName>Customers_Needs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customers Needs</label>
    <type>Checkbox</type>
</CustomField>