Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/CV_Attached__c.field-meta.xml
<CustomField>
    <fullName>CV_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CV Attached</label>
    <type>Checkbox</type>
</CustomField>