Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/DBS_Check__c.field-meta.xml
<CustomField>
    <fullName>DBS_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DBS Check</label>
    <type>Checkbox</type>
</CustomField>