Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Degree_Subject__c.field-meta.xml
<CustomField>
    <fullName>Degree_Subject__c</fullName>
    <label>Degree Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>