Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Dismissed_Past_2_Years__c.field-meta.xml
<CustomField>
    <fullName>Dismissed_Past_2_Years__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have you been dismissed from an employer in the last 2 years?</inlineHelpText>
    <label>Dismissed Past 2 Years</label>
    <type>Checkbox</type>
</CustomField>