Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/DoHSc_Stage__c.field-meta.xml
<CustomField>
    <fullName>DoHSc_Stage__c</fullName>
    <formula>TEXT(Candidate__r.DoHSc_Stages__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DoHSc - Stage</label>
    <type>Text</type>
</CustomField>