Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Friend_Referrer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Friend_Referrer_First_Name__c</fullName>
    <label>Friend Referrer First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>