Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/G4S_Employer__c.field-meta.xml
<CustomField>
    <fullName>G4S_Employer__c</fullName>
    <label>G4S Employer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSUK (G4S)</fullName>
            </value>
            <value>
                <fullName>HRGO</fullName>
            </value>
            <value>
                <fullName>Hays</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>