Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/G4S_Locations__c.field-meta.xml
<CustomField>
    <fullName>G4S_Locations__c</fullName>
    <label>G4S Locations</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>G4S_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bexley - Abbeywood Bexle</fullName>
            </value>
            <value>
                <fullName>Bexley - LTS 221 Erith Road</fullName>
            </value>
            <value>
                <fullName>Bexley - Vine Christian Community Church</fullName>
            </value>
            <value>
                <fullName>Bexley - Welling Westwood Lane Car Park</fullName>
            </value>
            <value>
                <fullName>Birmingham - Aston University Birmingham</fullName>
            </value>
            <value>
                <fullName>Birmingham- Birmingham Airport</fullName>
            </value>
            <value>
                <fullName>Boston - Castle Market</fullName>
            </value>
            <value>
                <fullName>Bradford</fullName>
            </value>
            <value>
                <fullName>Bromley - Cotmandene Car Park</fullName>
            </value>
            <value>
                <fullName>Bromley - Crystal Palace Park</fullName>
            </value>
            <value>
                <fullName>Coventry  - Broad Steet Health Centre</fullName>
            </value>
            <value>
                <fullName>Greenwich - Abery Street Car Park</fullName>
            </value>
            <value>
                <fullName>Greenwich - De Vere LTS testing site</fullName>
            </value>
            <value>
                <fullName>Greenwich - RTS Covid-19 Testing site</fullName>
            </value>
            <value>
                <fullName>Lambeth -  Angela Davis Industrial Estate</fullName>
            </value>
            <value>
                <fullName>Lambeth - Streatham Common Car Park</fullName>
            </value>
            <value>
                <fullName>Lewisham - Molesworth Molesworth Street Car Park</fullName>
            </value>
            <value>
                <fullName>Lewisham - Vanguard Street Car Park</fullName>
            </value>
            <value>
                <fullName>Newham - LTS Hilda Road</fullName>
            </value>
            <value>
                <fullName>Peterborough</fullName>
            </value>
            <value>
                <fullName>Southwark - Belair Car Park</fullName>
            </value>
            <value>
                <fullName>Southwark - Park Burgess Park Car Park</fullName>
            </value>
            <value>
                <fullName>Southwark - Wheatsheaf Community Hall</fullName>
            </value>
            <value>
                <fullName>Southwood - University of Greenwich Avery Hill Campus</fullName>
            </value>
            <value>
                <fullName>Wellingborough - Market Square</fullName>
            </value>
            <value>
                <fullName>Wigan</fullName>
            </value>
            <value>
                <fullName>Worcester - RTS County Hall</fullName>
            </value>
            <value>
                <fullName>Wychavon -  Pershore Civic Centre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>