Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/G4S_Region__c.field-meta.xml
<CustomField>
    <fullName>G4S_Region__c</fullName>
    <label>G4S Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Midlands</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>