Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/G4S_Working__c.field-meta.xml
<CustomField>
    <fullName>G4S_Working__c</fullName>
    <defaultValue>false</defaultValue>
    <label>G4S Working</label>
    <type>Checkbox</type>
</CustomField>