Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/GCSE_Science__c.field-meta.xml
<CustomField>
    <fullName>GCSE_Science__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have a GCSE in Science, at grade C or above?</inlineHelpText>
    <label>GCSE Science</label>
    <type>Checkbox</type>
</CustomField>