Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/GDPR_Consent__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDPR Consent</label>
    <type>Checkbox</type>
</CustomField>