Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Hovis_Location__c.field-meta.xml
<CustomField>
    <fullName>Hovis_Location__c</fullName>
    <label>Hovis Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avonmouth</fullName>
            </value>
            <value>
                <fullName>Belfast</fullName>
            </value>
            <value>
                <fullName>Bradford</fullName>
            </value>
            <value>
                <fullName>Dagenham</fullName>
            </value>
            <value>
                <fullName>Erith</fullName>
            </value>
            <value>
                <fullName>Forest Gate</fullName>
            </value>
            <value>
                <fullName>Glasgow</fullName>
            </value>
            <value>
                <fullName>Golborne</fullName>
            </value>
            <value>
                <fullName>Nottingham</fullName>
            </value>
            <value>
                <fullName>Sebon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>