Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Hovis_Location_New__c.field-meta.xml
<CustomField>
    <fullName>Hovis_Location_New__c</fullName>
    <label>Hovis Location (New)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hovis Avonmouth, Avonmouth Way, Avonmouth, Bristol, BS11 8DQ</fullName>
            </value>
            <value>
                <fullName>Hovis Belfast, Apollo Road, Belfast, BT12 6LP</fullName>
            </value>
            <value>
                <fullName>Hovis Forest Gate, Chaucer Road, London, E7 8NA</fullName>
            </value>
            <value>
                <fullName>Hovis Nottingham, Main Road, Watnall, Nottingham, NG16 1HB</fullName>
            </value>
            <value>
                <fullName>Hovis Bradford, Gain Lane, Thornbury, Bradford, BD3 7DX</fullName>
                <isActive>false</isActive>
                <label>Hovis Bradford, Gain Lane, Thornbury, Bradford, BD3 7DX</label>
            </value>
            <value>
                <fullName>Hovis Erith, Belmont Road, Erith, Kent, DA8 1JZ</fullName>
                <isActive>false</isActive>
                <label>Hovis Erith, Belmont Road, Erith, Kent, DA8 1JZ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>