Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Hovis_Roles__c.field-meta.xml
<CustomField>
    <fullName>Hovis_Roles__c</fullName>
    <label>Hovis Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bakery Operative</fullName>
            </value>
            <value>
                <fullName>Production Operative</fullName>
            </value>
            <value>
                <fullName>Dispatch Operative</fullName>
            </value>
            <value>
                <fullName>Hygiene Operative</fullName>
            </value>
            <value>
                <fullName>Any of the above roles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>