Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Hovis_Work_Length__c.field-meta.xml
<CustomField>
    <fullName>Hovis_Work_Length__c</fullName>
    <label>Hovis Work Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-6 months</fullName>
                <label>0-6 Months</label>
            </value>
            <value>
                <fullName>7-11month</fullName>
                <label>7-11 Months</label>
            </value>
            <value>
                <fullName>1-2 years</fullName>
                <label>1-2 Years</label>
            </value>
            <value>
                <fullName>2 years +</fullName>
                <label>2 Years+</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>