Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Job_Role_Filtered__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Filtered__c</fullName>
    <label>Job Role Filtered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Data Scientist</fullName>
            </value>
            <value>
                <fullName>Junior Laboratory Technician</fullName>
            </value>
            <value>
                <fullName>Laboratory Equipment Technician</fullName>
            </value>
            <value>
                <fullName>Laboratory Shift Manager</fullName>
            </value>
            <value>
                <fullName>Laboratory Support Technician</fullName>
            </value>
            <value>
                <fullName>Senior Laboratory Technician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>