Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/John_Lewis_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>John_Lewis_Start_Time__c</fullName>
    <label>John Lewis Start Time</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6:00am</fullName>
            </value>
            <value>
                <fullName>2:00pm</fullName>
            </value>
            <value>
                <fullName>10:00pm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>